Fixed navbar-text on smaller screens (< 1199px)

--- a/less/_navbar.less
+++ b/less/_navbar.less
@@ -174,11 +174,17 @@
   }
 
   @media (max-width: 1199px) {
+    .navbar-text {
+      color: inherit;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
 
     .navbar-brand {
       height: 50px;
       padding: 10px 15px;
     }
+
     .navbar-form {
       margin-top: 10px;
     }
